# iomanager

./: .gitignore  README.md  pyproject.toml
config/: settings.py  urls.py
iomanager_app/: admin.py  apps.py  models.py  notifications.py  urls.py  views.py
iomanager_app/management/commands/: expire_passes.py  seed_iomanager.py
iomanager_app/migrations/: 0001_initial.py  0002_passtemplate_producttemplate_customerpass_and_more.py  0003_customer_customer_last_visit_id_idx_and_more.py  0004_visitsession_re_wait_requested_at.py  0005_alter_passtransaction_status.py  0006_passtemplate_is_active.py  0007_remove_passtemplate_is_active_and_more.py  0008_backfill_template_name_snapshot.py  0009_visitorderitem_product_name_snapshot_and_more.py  0010_backfill_product_name_snapshot.py  0011_systemsetting.py
iomanager_app/templates/iomanager_app/: admin_status.html  base.html  customer_detail.html  customer_home.html  customer_info.html  customer_profile.html  login.html  manager_base.html  pass_customer.html  pass_history.html  pass_issue.html  pass_settings.html  pass_use.html  product_settings.html  selection.html  system_settings.html  visit_entry_stats.html  visit_history.html
iomanager_app/templates/iomanager_app/includes/: admin_status_panel.html  page_size_select.html  pagination_nav.html
iomanager_app/templatetags/: phone_filters.py
scripts/: db_customer_to_excel.py  gdrive.py  run_expire_passes.sh  run_upload_db.sh  run_upload_drive.sh  upload_db.py  upload_drive.py
