[project]
name = "iomanager"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "django>=6.0.4",
    "google-api-python-client>=2.194.0",
    "google-auth-httplib2>=0.3.1",
    "google-auth-oauthlib>=1.3.1",
    "gunicorn>=25.3.0",
    "openpyxl>=3.1.5",
    "pandas>=3.0.2",
]
